# music-assistant-insights

./: .gitignore  AGENTS.md  Cargo.toml  FLOW.md  LOGGING.md  README.md  test-logging.sh  test_phase1_integration.py  test_sidecar_client.py
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docker/: Dockerfile  Dockerfile.cuda  Dockerfile.openvino  Dockerfile.rocm
src/: config.rs  error.rs  lib.rs  main.rs  math.rs
src/inference/: audio.rs  download.rs  mod.rs  model.rs  registry.rs  text.rs
src/mood/: mod.rs  prompts.rs
src/queue/: mod.rs
src/server/: embed.rs  extractors.rs  ingest.rs  management.rs  mod.rs  mood.rs  routes.rs  stream.rs  taste.rs  tracks.rs  watcher.rs  websocket.rs
src/storage/: mod.rs  qdrant.rs  usearch_store.rs
src/taste/: compute.rs  mod.rs
src/types/: api.rs  embed.rs  mod.rs  models.rs  mood.rs  streaming.rs  taste.rs  tracks.rs
src/watcher/: config.rs  decoder.rs  metadata.rs  mod.rs  processor.rs  scanner.rs  service.rs  state.rs  watcher.rs
src/worker/: mod.rs
tests/: api_integration.rs
