[package]
name = "insight-sidecar"
version = "0.1.0"
edition = "2021"
description = "ML inference sidecar for Music Assistant - provides audio/text embeddings using CLAP models"
license = "Apache-2.0"
repository = "https://github.com/ztripez/music-assistant-insights"
rust-version = "1.75"

[features]
default = ["full"]
cuda = ["inference", "ort/cuda"]
rocm = ["inference", "ort/rocm"]
coreml = ["inference", "ort/coreml"]
directml = ["inference", "ort/directml"]
openvino = ["inference", "ort/openvino"]
inference = ["dep:ort", "dep:ndarray", "dep:rubato", "dep:reqwest", "dep:sha2", "dep:tokio-util", "dep:tokenizers", "dep:mel_spec"]
storage = ["dep:qdrant-client"]
storage-file = ["dep:usearch", "dep:bincode"]
audio = ["dep:symphonia"]
watcher = ["dep:notify", "dep:notify-debouncer-mini", "dep:walkdir", "audio", "inference", "storage-file"]
full = ["inference", "storage", "storage-file", "audio", "watcher"]
integration = []

[dependencies]
# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
rmp-serde = "1"

# Configuration
config = "0.14"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ML inference (Phase 2 - optional)
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries", "ndarray"], optional = true }
ndarray = { version = "0.16", optional = true }
rubato = { version = "0.15", optional = true }
reqwest = { version = "0.12", features = ["stream"], optional = true }
sha2 = { version = "0.10", optional = true }
# directories moved to non-optional below
tokio-util = { version = "0.7", features = ["io"], optional = true }
tokenizers = { version = "0.21", optional = true }

# Vector storage - Qdrant (hosted)
qdrant-client = { version = "1", optional = true }

# Vector storage - usearch (embedded/file-based)
usearch = { version = "2", optional = true }
bincode = { version = "1", optional = true }

# Audio processing (Phase 2 - optional)
symphonia = { version = "0.5", features = ["all"], optional = true }

# File watcher (optional)
notify = { version = "6", optional = true }
notify-debouncer-mini = { version = "0.4", optional = true }
walkdir = { version = "2", optional = true }

# Utilities
uuid = { version = "1", features = ["v4", "v5", "serde"] }
bytes = "1"
chrono = "0.4"
futures-util = "0.3"
directories = "5"
urlencoding = "2"
mel_spec = { version = "0.3.3", optional = true }
dashmap = "6.1.0"
tracing-appender = "0.2.4"
dirs = "6.0.0"
futures = "0.3.31"
redb = "2.2.0"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "15"
tempfile = "3.24.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
